--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "electron": "^1.6.11",
+    "lodash.find": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-dnd": "^2.5.3",
+    "react-dnd-html5-backend": "^2.5.3",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
