--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
     "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "reselect": "^3.0.1",
     "xml2js": "^0.4.19"
   },
