--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "electron": "^1.6.11",
     "lodash.find": "^4.6.0",
+    "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
@@ -30,8 +31,6 @@
     "redux": "^3.7.2",
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
-    "request": "^2.83.0",
-    "request-promise-native": "^1.0.5",
     "reselect": "^3.0.1",
     "xml2js": "^0.4.19"
   },
