--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "uuid": "^3.1.0",
     "xml2js": "^0.4.19"
   },
   "scripts": {
