--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.find": "^4.6.0",
     "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
+    "lodash.uniqby": "^4.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dnd": "^2.5.3",
