--- a/src/fontello/config.json
+++ b/src/fontello/config.json
@@ -13,51 +13,15 @@
       "src": "entypo"
     },
     {
-      "uid": "14017aae737730faeda4a6fd8fb3a5f0",
-      "css": "check",
-      "code": 59393,
-      "src": "entypo"
-    },
-    {
       "uid": "c709da589c923ba3c2ad48d9fc563e93",
       "css": "cancel",
       "code": 59394,
       "src": "entypo"
     },
     {
-      "uid": "2c0b53280f82068f6bab4e2200025d9f",
-      "css": "chat",
-      "code": 59395,
-      "src": "entypo"
-    },
-    {
-      "uid": "2626e3a1bbcd90e45849af3b58a1d594",
-      "css": "trash",
-      "code": 59398,
-      "src": "entypo"
-    },
-    {
-      "uid": "6274e0601f2feef7eced89146e708de0",
-      "css": "user-add",
-      "code": 59399,
-      "src": "entypo"
-    },
-    {
       "uid": "413717f5ea649e8d8b93938be277264a",
       "css": "calendar",
       "code": 59396,
-      "src": "entypo"
-    },
-    {
-      "uid": "3a3f65b92c9b2fcbb3a8dcd0d42ee806",
-      "css": "resize-full",
-      "code": 59397,
-      "src": "entypo"
-    },
-    {
-      "uid": "108c8ac13badc00ce66da014436e6eb1",
-      "css": "resize-small",
-      "code": 59400,
       "src": "entypo"
     },
     {
@@ -73,12 +37,6 @@
       "src": "entypo"
     },
     {
-      "uid": "875ab0f6d417223f6ec76ff7f0a4baed",
-      "css": "tag",
-      "code": 59403,
-      "src": "entypo"
-    },
-    {
       "uid": "16890362e811b4cb8de36282b071fe30",
       "css": "comment",
       "code": 59404,
@@ -91,9 +49,27 @@
       "src": "entypo"
     },
     {
-      "uid": "25b34dea4784f72c710454f32ff8fa2b",
-      "css": "star",
-      "code": 59406,
+      "uid": "390d6d13398cbf8c8c3c5493f7d34088",
+      "css": "export",
+      "code": 59407,
+      "src": "entypo"
+    },
+    {
+      "uid": "bbd66ef66bb8fa9edde54d9a90b89150",
+      "css": "user",
+      "code": 59397,
+      "src": "entypo"
+    },
+    {
+      "uid": "c759418c008e9562944080fee617fc76",
+      "css": "cancel-circled",
+      "code": 59393,
+      "src": "entypo"
+    },
+    {
+      "uid": "cc05df515bebe11df3ada0a5910a8f6d",
+      "css": "box",
+      "code": 59399,
       "src": "entypo"
     }
   ]
