--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,43 +1,68 @@
 {
-  "extends": "airbnb",
-  "env": {
-    "node": true,
-    "mocha": true,
-    "browser": true
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 9,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "sourceType": "module"
   },
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "extends": ["react-app", "airbnb", "prettier", "prettier/react"],
+  "plugins": [
+    "simple-import-sort",
+    "import",
+    "sort-destructure-keys",
+    "sort-keys-fix"
+  ],
   "rules": {
-    "indent": [2, 2],
-    "padded-blocks": 0,
-    "max-len": [2, 100],
-    "comma-dangle": [2, "never"],
-    "space-before-function-paren": [2, {
-        "anonymous": "always",
-        "named": "always",
-        "asyncArrow": "ignore"
-    }],
-    "no-underscore-dangle": [2, {
-      "allowAfterThis": true,
-      "allowAfterSuper": true
-    }],
-    "import/no-extraneous-dependencies": [2, {
-      "devDependencies": [
-        "**/*.spec.js"
-      ]
-    }],
-    "react/jsx-filename-extension": [2, {
-      "extensions": [".js", ".jsx"]
-    }],
-    "react/jsx-max-props-per-line": [2, {
-      "maximum": 3,
-      "when": "multiline"
-    }],
-    "react/jsx-closing-bracket-location": [2, {
-      "nonEmpty": "after-props",
-      "selfClosing": "after-props"
-    }],
-    "react/jsx-first-prop-new-line": [2, "never"],
-    "react/forbid-prop-types": [1, {
-      "forbid": ["any"]
-    }]
+    "import/first": 2,
+    "import/newline-after-import": 2,
+    "import/no-duplicates": 2,
+    "newline-per-chained-call": [2, { "ignoreChainWithDepth": 2 }],
+    "jsx-a11y/click-events-have-key-events": 0,
+    "react/jsx-closing-bracket-location": [
+      2,
+      { "nonEmpty": "after-props", "selfClosing": false }
+    ],
+    "react/jsx-indent": [
+      2,
+      2,
+      { "checkAttributes": false, "indentLogicalExpressions": true }
+    ],
+    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-fragments": [2, "element"],
+    "react/jsx-indent-props": [2, 2],
+    "react/jsx-props-no-spreading": 0,
+    "react/jsx-sort-props": [
+      2,
+      {
+        "noSortAlphabetically": false,
+        "ignoreCase": true,
+        "callbacksLast": true,
+        "shorthandFirst": true,
+        "reservedFirst": true
+      }
+    ],
+    "simple-import-sort/sort": 2,
+    "sort-destructure-keys/sort-destructure-keys": 2,
+    "sort-imports": "off",
+    "sort-keys": [
+      2,
+      "asc",
+      { "caseSensitive": true, "natural": false, "minKeys": 2 }
+    ],
+    "simple-import-sort/sort": 2,
+    "sort-imports": "off",
+    "sort-keys-fix/sort-keys-fix": 2
   }
 }
