--- a/package.json
+++ b/package.json
@@ -4,46 +4,72 @@
   "private": true,
   "main": "./main.js",
   "homepage": "https://sixertoy.github.io/my-job-board/",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "foreman": "^2.0.0",
-    "stylelint-config-standard": "^17.0.0"
+    "docsify": "4.9.4",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.2.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-simple-import-sort": "4.0.0",
+    "eslint-plugin-sort-destructure-keys": "1.3.3",
+    "eslint-plugin-sort-keys-fix": "1.0.1",
+    "foreman": "3.0.1",
+    "husky": "3.0.0",
+    "lint-staged": "9.1.0",
+    "node-sass": "4.12.0",
+    "prettier": "1.18.2",
+    "prettier-eslint": "9.0.0",
+    "prettier-stylelint": "0.4.2",
+    "redux-devtools-extension": "^2.13.8",
+    "stylelint": "10.1.0",
+    "stylelint-config-standard": "18.3.0",
+    "stylelint-order": "3.0.0",
+    "stylelint-scss": "3.9.1"
   },
   "dependencies": {
-    "electron": "^1.6.11",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
+    "final-form": "^4.18.7",
+    "history": "^4.10.1",
     "lodash.find": "^4.6.0",
     "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "lodash.uniqby": "^4.7.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dnd": "^2.5.3",
-    "react-dnd-html5-backend": "^2.5.3",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.5",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "1.0.10",
-    "redux": "^3.7.2",
-    "redux-persist": "^4.8.2",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
-    "uuid": "^3.1.0",
-    "xml2js": "^0.4.19"
+    "prop-types": "^15.7.2",
+    "query-string": "^6.10.1",
+    "re-reselect": "^3.4.0",
+    "react": "^16.12.0",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dom": "^16.12.0",
+    "react-final-form": "^6.3.5",
+    "react-persist": "^1.0.2",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.4.0",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron": "electron .",
-    "start:dev": "nf start -p 3001"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
