--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "stylelint-scss": "3.9.1"
   },
   "dependencies": {
+    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
+    "@iziges/napper-core-react": "https://github.com/sixertoy/napper-core-react.git",
+    "@iziges/napper-styles": "https://github.com/sixertoy/napper-styles.git#latest",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -56,6 +59,8 @@
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.5",
+    "react-icons": "^3.9.0",
+    "react-jss": "^10.0.4",
     "react-persist": "^1.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -70,6 +75,6 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "cleanup": "rm -rf node_modules && rm yarn.lock"
   }
 }
