--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "final-form": "^4.18.7",
     "history": "^4.10.1",
     "lodash.find": "^4.6.0",
+    "lodash.get": "^4.4.2",
     "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "lodash.uniqby": "^4.7.0",
