--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,26 @@
 language: node_js
 node_js:
   - '12.13.1'
+
+cache:
+  directories:
+    - node_modules
 script:
   - yarn test --collect-coverage --verbose
+
 after_success:
   - cat ./coverage/lcov.info | coveralls && rm -rf ./coverage
+
+env:
+  - CI=true
+
+before_deploy:
+  - yarn global add netlify-cli
+  - yarn build
+
+deploy:
+  provider: script
+  script: netlify deploy -s $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN -p --dir ./build
+  skip_cleanup: true
+  on:
+    branch: master
