--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "yarn build",
     "cleanup": "rm -rf node_modules && rm yarn.lock"
   }
 }
