--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@tippy.js/react": "^3.1.1",
     "classnames": "^2.2.6",
     "final-form": "^4.18.7",
     "history": "^4.10.1",
@@ -80,6 +81,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "tippy.js": "^5.2.0",
     "uuid": "^3.4.0",
     "xml2js": "^0.4.23"
   },
