update context menu

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,7 @@
 {
   "src/**/*.{js,jsx,json,css,scss,md}": [
-    "prettier --single-quote --write",
+    "eslint",
+    "pretty-quick --staged",
     "git add"
   ]
 }
