--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "husky": "3.0.0",
     "lint-staged": "9.1.0",
     "node-sass": "4.12.0",
-    "prettier": "1.18.2",
+    "prettier": "^1.19.1",
     "prettier-eslint": "9.0.0",
     "prettier-stylelint": "0.4.2",
+    "pretty-quick": "^2.0.1",
     "redux-devtools-extension": "^2.13.8",
     "stylelint": "10.1.0",
     "stylelint-config-standard": "18.3.0",
@@ -90,6 +91,7 @@
     "cleanup": "rm -rf node_modules && rm yarn.lock",
     "dev": "react-scripts start",
     "test": "react-scripts test",
+    "lint": "eslint ./src/**/*.{js,jsx}",
     "buildc": "node ./.scripts/build-config",
     "build": "yarn buildc && react-scripts build",
     "deploy:dev": "netlify deploy --dir ./build --open"
