--- a/package.json
+++ b/package.json
@@ -87,6 +87,11 @@
     "uuid": "^3.4.0",
     "xml2js": "^0.4.23"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "scripts": {
     "cleanup": "rm -rf node_modules && rm yarn.lock",
     "dev": "react-scripts start",
