--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "prettier": "^1.19.1",
     "prettier-eslint": "9.0.0",
     "prettier-stylelint": "0.4.2",
-    "pretty-quick": "^2.0.1",
     "redux-devtools-extension": "^2.13.8",
     "stylelint": "10.1.0",
     "stylelint-config-standard": "18.3.0",
@@ -87,17 +86,12 @@
     "uuid": "^3.4.0",
     "xml2js": "^0.4.23"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "scripts": {
     "cleanup": "rm -rf node_modules && rm yarn.lock",
     "dev": "react-scripts start",
     "test": "react-scripts test",
-    "lint": "eslint ./src/**/*.{js,jsx}",
-    "buildc": "node ./.scripts/build-config",
+    "lint": "eslint ./src/**/*.{js,jsx,json}",
+    "buildc": "yarn lint && node ./.scripts/build-config",
     "build": "yarn buildc && react-scripts build",
     "deploy:dev": "netlify deploy --dir ./build --open"
   }
