--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^1.19.1",
     "prettier-eslint": "9.0.0",
     "prettier-stylelint": "0.4.2",
+    "pretty-quick": "^2.0.1",
     "redux-devtools-extension": "^2.13.8",
     "stylelint": "10.1.0",
     "stylelint-config-standard": "18.3.0",
