update napper-kanbanboard component jssprovider config

--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "classnames": "^2.2.6",
     "final-form": "^4.18.7",
     "history": "^4.10.1",
+    "jss-plugin-default-unit": "^10.0.4",
+    "jss-plugin-nested": "^10.0.4",
+    "jss-plugin-vendor-prefixer": "^10.0.4",
     "lodash.find": "^4.6.0",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
