--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-final-form": "^6.3.5",
     "react-icons": "^3.9.0",
     "react-jss": "^10.0.4",
+    "react-markdown": "^4.3.1",
     "react-persist": "^1.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
