--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
+    "react-draft-wysiwyg": "^1.14.4",
     "react-final-form": "^6.3.5",
     "react-icons": "^3.9.0",
     "react-jss": "^10.0.4",
