--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@tippy.js/react": "^3.1.1",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "final-form": "^4.18.7",
     "history": "^4.10.1",
