--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "dependencies": {
     "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
-    "@iziges/napper-core-react": "https://github.com/sixertoy/napper-core-react.git",
+    "@iziges/napper-react": "https://github.com/sixertoy/napper-react.git",
     "@iziges/napper-styles": "https://github.com/sixertoy/napper-styles.git#latest",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -83,7 +83,7 @@
     "react-persist": "^1.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.0",
     "react-tooltip": "^4.0.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
