--- a/package.json
+++ b/package.json
@@ -48,15 +48,18 @@
   },
   "dependencies": {
     "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
-    "@iziges/napper-todolist": "https://github.com/sixertoy/napper-todolist.git",
     "@iziges/napper-react": "https://github.com/sixertoy/napper-react.git",
     "@iziges/napper-styles": "https://github.com/sixertoy/napper-styles.git#latest",
+    "@iziges/napper-todolist": "https://github.com/sixertoy/napper-todolist.git",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@tippy.js/react": "^3.1.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "draft-js": "^0.11.5",
+    "draft-js-export-markdown": "^1.4.0",
+    "draft-js-import-markdown": "^1.4.0",
     "final-form": "^4.18.7",
     "history": "^4.10.1",
     "jss-plugin-default-unit": "^10.0.4",
@@ -85,7 +88,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-tooltip": "^4.0.0",
+    "react-tooltip": "^4.1.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
