--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-toastify": "^5.5.0",
     "react-tooltip": "^4.1.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
