✨ ajout des errors sur le form de creation des projects

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jss-plugin-default-unit": "^10.0.4",
     "jss-plugin-nested": "^10.0.4",
     "jss-plugin-vendor-prefixer": "^10.0.4",
+    "lodash.debounce": "^4.0.8",
     "lodash.find": "^4.6.0",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
@@ -88,6 +89,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-toast-notifications": "^2.4.0",
     "react-toastify": "^5.5.0",
     "react-tooltip": "^4.1.2",
     "redux": "^4.0.5",
