--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "query-string": "^6.10.1",
     "re-reselect": "^3.4.0",
     "react": "^16.12.0",
+    "react-color": "^2.18.0",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
