remove nappr-core withStyles HOC

--- a/package.json
+++ b/package.json
@@ -47,10 +47,9 @@
     "stylelint-scss": "3.9.1"
   },
   "dependencies": {
-    "@iziges/napper-core": "https://github.com/sixertoy/napper-core.git",
-    "@iziges/napper-react": "https://github.com/sixertoy/napper-react.git",
-    "@iziges/napper-styles": "https://github.com/sixertoy/napper-styles.git#latest",
-    "@nappr/nappr-todolist": "^0.1.24",
+    "@nappr/nappr-core": "^0.2.30",
+    "@nappr/nappr-styles": "^0.2.12",
+    "@nappr/nappr-todolist": "^0.1.30",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
